working on the compare letters part

--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+<!-- JS connection -->
+<script type="text/javascript" src="assets/javascript/game.js"></script>
+
+
+    <!-- css -->
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
-<body>
-    <h1>Print any key to get started </h1>
 
-    <p id="wins"></p>
-    <p id="ramaining"></p>
-    <p id="lettersGuessed"></p>
-    <p id="guess1"></p>
-    <p id="guess2"></p>
-    <p id="guess3"></p>
-    <p id="guess4"></p>
-    <p id="guess5"></p>
-    <p id="guess6"></p>
-    <p id="guess7"></p>
-    <p id="guess8"></p>
-    <p id="guess9"></p>
-    <p id="guess10"></p>
+
+<body>
+
+
+<div id="word" > es </div>
+
+<div id="guessed">  </div>
+
 
 
 </body>
+
+
 </html>
