--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </tr>
                     <tr>
                       <td>
-                        <img src="" name="canvas" />
+                        <img src="assets/images/reggae.png" name="canvas" />
                       </td>
                     </tr>
                     </table>
