Adding more details

--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"/>
-
-
-
-
   </head>
 
 <body>
     <div class="container" id= "full">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4" id= "content">HangMan!!!</h1>
+                <h1 class="display-4" id= "content">Rasta-HangMan!!!</h1>
 
                 <form name="imageForm">
                     <table border=3>
@@ -60,21 +56,21 @@
 
                     <div class="row">
                         <div class="col-12-sm">
-                            <h3>Letters already guessed:</h3>
+                            <h3>Wins:</h3>
                             <div id= "winCounter">p </div>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-12-sm">
-                            <h3>Wins:</h3>
+                            <h3>Losses:</h3>
                             <div id= "lossCounter"> p</div>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-12-sm">
-                            <h3>Wins:</h3>
+                            <h3>Guessed Letters:</h3>
                             <div id= "wrongGuesses">P </div>
                         </div>
                     </div>
