Added a message for each word

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
 
                     <div class="row">
                         <div class="col-12-sm">
+                            <div id="littlemessage"></div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-12-sm">
                             <h3> Number of guesses remaining: </h3>
                             <div id="numGuesses">p </div>
                         </div>
