Adding google, fonts, more comments, fixing some bugs

--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"/>
+
+      <!--Font-->
+      <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+
+      <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
+
   </head>
 
 <body>
     <div class="container" id= "full">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4" id= "content">Rasta-HangMan!!!</h1>
+                <h1 class="display-4" id= "content">Rasta-HangMan</h1>
+
 
                 <form name="imageForm">
                     <table border=3>
@@ -39,7 +46,7 @@
                   </form>
 
 
-                <div class=" container">
+                <div class=" container" id= "gameinfo">
                     <div class="row">
                         <div class="col-12-sm">
                             <h3> Word:</h3>
