--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                     <div class="row">
                         <div class="col-12-sm">
                             <h3> Word:</h3>
-                            <div id="wordToGuess">p</div>
+                            <div id="wordToGuess"></div>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-12-sm">
-                            <div id="littlemessage"></div>
+                            <div id="message"></div>
                         </div>
                     </div>
 
@@ -64,28 +64,28 @@
                     <div class="row">
                         <div class="col-12-sm">
                             <h3> Number of guesses remaining: </h3>
-                            <div id="numGuesses">p </div>
+                            <div id="numGuesses"></div>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-12-sm">
                             <h3>Wins:</h3>
-                            <div id= "winCounter">p </div>
+                            <div id= "winCounter"></div>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-12-sm">
                             <h3>Losses:</h3>
-                            <div id= "lossCounter"> p</div>
+                            <div id= "lossCounter"></div>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-12-sm">
                             <h3>Guessed Letters:</h3>
-                            <div id= "wrongGuesses">P </div>
+                            <div id= "wrongGuesses"></div>
                         </div>
                     </div>
                 </div>
